# remo-gpu

./: README.md  gpu_watch.py  gpu_watch.sh  pyproject.toml  remo_gpu.sh
gpu_watch.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
